show only parent in data input

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1035,58 +1035,58 @@
 		  "blacklist": [],
 		  "dataInputFiltersConfig": {
 			"text": "Planet",
-			"value": 1,
-				"collapsed": true,
-				"children": [
-				  {
-					"text": "REScene",
-					"value": {
-					  "sensorType": "REScene"
-					}
-				  },
-				  {
-					"text": "PSScene3Band",
-					"value": {
-					  "sensorType": "PSScene3Band"
-					}
-				  },
-				  {
-					"text": "PSOrthoTile",
-					"value": {
-					  "sensorType": "PSOrthoTile"
-					}
-				  },
-				  {
-					"text": "REOrthoTile",
-					"value": {
-					  "sensorType": "REOrthoTile"
-					}
-				  },
-				  {
-					"text": "SkySatScene",
-					"value": {
-					  "sensorType": "SkySatScene"
-					}
-				  },
-				  {
-					"text": "Landsat8L1G",
-					"value": {
-					  "sensorType": "Landsat8L1G"
-					}
-				  },
-				  {
-					"text": "Sentinel2L1C",
-					"value": {
-					  "sensorType": "Sentinel2L1C"
-					}
-				  },
-				  {
-					  "text": "Others",
-					  "value": {
-						"sensorType": "others"
-					  }
-					}
-				]
+			"value": "Planet",
+			"collapsed": true,
+			"children": [
+			  {
+				"text": "REScene",
+				"value": {
+				  "sensorType": "REScene"
+				}
+			  },
+			  {
+				"text": "PSScene3Band",
+				"value": {
+				  "sensorType": "PSScene3Band"
+				}
+			  },
+			  {
+				"text": "PSOrthoTile",
+				"value": {
+				  "sensorType": "PSOrthoTile"
+				}
+			  },
+			  {
+				"text": "REOrthoTile",
+				"value": {
+				  "sensorType": "REOrthoTile"
+				}
+			  },
+			  {
+				"text": "SkySatScene",
+				"value": {
+				  "sensorType": "SkySatScene"
+				}
+			  },
+			  {
+				"text": "Landsat8L1G",
+				"value": {
+				  "sensorType": "Landsat8L1G"
+				}
+			  },
+			  {
+				"text": "Sentinel2L1C",
+				"value": {
+				  "sensorType": "Sentinel2L1C"
+				}
+			  },
+			  {
+				  "text": "Others",
+				  "value": {
+					"sensorType": "others"
+				  }
+				}
+			]
 			}
 		},
 		"PIC4CARTO": {
@@ -1117,7 +1117,7 @@
 			"blacklist":[],
 			"dataInputFiltersConfig":{
 				"text":"Open Street Images",
-				"value":1,
+				"value":"Open Street Images",
 				"collapsed":true,
 				"children":[
 					{
@@ -1190,7 +1190,7 @@
 			"blacklist": [],
 			"dataInputFiltersConfig": {
 				"text": "OpenAerial",
-				"value": 1,
+				"value": "OpenAerial",
 					"indeterminate": true,
 					"collapsed": true,
 					"children": [
@@ -1246,7 +1246,7 @@
 			"blacklist": [],
 			"dataInputFiltersConfig": {
 				  "text":"Imisight",
-				  "value": 1,
+				  "value": "Imisight",
 				  "collapsed": true,
 				  "children": [
 					 {
@@ -1301,7 +1301,7 @@
 			"blacklist": [],
 			"dataInputFiltersConfig": {
 				"text": "Sentinel",
-				"value": 1,
+				"value": "Sentinel",
 					"indeterminate": true,
 					"collapsed": true,
 					"children": [
@@ -1357,7 +1357,7 @@
 			"blacklist": [],
 			"dataInputFiltersConfig": {
 				"text": "Airbus",
-				"value": 1,
+				"value": "Airbus",
 					"indeterminate": true,
 					"collapsed": true,
 					"children": [
@@ -1431,7 +1431,7 @@
         		"blacklist": [],
         		"dataInputFiltersConfig": {
         			"text": "Video",
-        			"value": 1,
+        			"value": "Video",
         				"indeterminate": true,
         				"collapsed": true,
         				"children": [
