--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
@@ -1,6 +1,9 @@
 <div class="status-bar">
 
-	<ansyn-search-panel></ansyn-search-panel>
+	<div class="search">
+		<ansyn-search-panel></ansyn-search-panel>
+		<ansyn-filters-panel></ansyn-filters-panel>
+	</div>
 	<ansyn-display-panel></ansyn-display-panel>
 	<ansyn-case-panel></ansyn-case-panel>
 
