--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -18,6 +18,10 @@
 		display: flex;
 		flex: 1;
 
+		div.search {
+			display: flex;
+			flex-grow: 1;
+		}
 		/deep/ i.icon, span.title {
 			margin: 0 5px;
 		}
