--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -272,39 +272,14 @@
   	"shortFilterListLength": 8,
     "filters": [
       {
-        "modelName": "sensorType",
-        "displayName": "Sensor Type",
-        "type": "Enum"
-      },
-      {
         "modelName": "sensorName",
-        "displayName": "Sensor Name",
-        "type": "Enum"
-      },
-      {
-        "modelName": "sourceType",
-        "displayName": "Source Type",
+        "displayName": "Sensor",
         "type": "Enum"
       },
       {
         "modelName": "isGeoRegistered",
         "displayName": "Geo Registration",
         "type": "Enum"
-      },
-      {
-      	"modelName": "containedInSearchPolygon",
-        "displayName": "Contains Region",
-        "type": "Enum"
-      },
-      {
-        "modelName": "bestResolution",
-        "displayName": "Resolution",
-        "type": "Slider"
-      },
-      {
-        "modelName": "cloudCoverage",
-        "displayName": "Cloud Coverage",
-        "type": "Slider"
       }
     ]
   },
