--- a/src/app/@ansyn/ansyn/less/common.less
+++ b/src/app/@ansyn/ansyn/less/common.less
@@ -18,14 +18,14 @@
 	border-bottom-right-radius: @status-bar-panel-radius;
 	border-top-right-radius: @status-bar-panel-radius;
 	padding: 5px 11px 5px 0;
+}
 
-	&.active {
-		background-color: @status-bar-active;
-	}
+.status-bar-button-active {
+	background-color: @status-bar-active;
+}
 
-	&:hover:not(.active) {
-		background: @status-bar-hover;
-	}
+.status-bar-button-hover {
+	background: @status-bar-hover;
 }
 
 .base-share-link {
