--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -52,4 +52,5 @@
 	<button (click)="showLayer()">Show/Hide Layer</button>
 	<button (click)="startDrag()">Start Drag</button>
 	<button (click)="stopDrag()">Stop Drag</button>
+	<button (click)="insertManySensorName()">Insert many sensor name</button>
 </div>
