--- a/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.html
@@ -16,7 +16,7 @@
 	</div>
 </div>
 
-<div class="filter">
+<div class="filter favorites">
 	<button ansynComboBoxTrigger
 			[withArrow]="false"
 			[disabled]="disableOnlyFavoritesButton"
