move style to common

--- a/src/app/@ansyn/ansyn/less/common.less
+++ b/src/app/@ansyn/ansyn/less/common.less
@@ -10,6 +10,12 @@
 	overflow: hidden;
 }
 
+.status-bar-panel {
+	display: flex;
+	align-items: center;
+	margin: 5px;
+}
+
 .status-bar-button {
 	margin-top: 1px;
 	background: @status-bar-panels;
