--- a/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.less
@@ -1,9 +1,7 @@
 @import "ansyn/less/common";
 
 :host {
-	display: flex;
-	align-items: center;
-	margin: 5px;
+	&:extend(.status-bar-panel);
 
 	div.filter {
 		margin-left: 5px;
