--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
@@ -3,58 +3,57 @@
 @import "ansyn/less/globals";
 
 :host {
+	&:extend(.status-bar-panel);
+
 	display: flex;
-	align-items: center;
-	margin: 5px;
+	flex-direction: row;
+	padding-left: 5px;
+	padding-right: 5px;
+	width: fit-content;
 
-	.search-panel {
-		display: flex;
-		flex-direction: row;
-		padding-left: 5px;
-		padding-right: 5px;
-		width: fit-content;
+	.box {
+		margin: 0 5px;
 
-		.box {
-			margin: 0 5px;
+		.button {
+			&:extend(.status-bar-button);
+			height: 35px;
 
-			.button {
-				&:extend(.status-bar-button);
-				height: 35px;
-
-				&.active {
-					&:extend(.status-bar-button-active);
-				}
-				&:hover:not(.active) {
-					&:extend(.status-bar-button-hover);
-				}
-				i.small { // until we get new small icons
-					font-size: 1em;
-
-				}
+			&.active {
+				&:extend(.status-bar-button-active);
 			}
 
-			&#editGeoFilter {
-				width: 85px;
+			&:hover:not(.active) {
+				&:extend(.status-bar-button-hover);
+			}
 
-				button {
-					justify-content: flex-start;
-				}
+			i.small { // until we get new small icons
+				font-size: 1em;
+
 			}
 		}
 
-		input.time-picker-input {
-			position: absolute;
-			top: 0;
-			padding-left: 28px;
-			width: 100%;
-			height: 100%;
-			border: none;
-			background-color: transparent;
-			color: white;
-			opacity: 0;
-			pointer-events: none;
-			font-family: @app-font;
-			font-size: 14px;
+		&#editGeoFilter {
+			width: 85px;
+
+			button {
+				justify-content: flex-start;
+			}
 		}
 	}
+
+	input.time-picker-input {
+		position: absolute;
+		top: 0;
+		padding-left: 28px;
+		width: 100%;
+		height: 100%;
+		border: none;
+		background-color: transparent;
+		color: white;
+		opacity: 0;
+		pointer-events: none;
+		font-family: @app-font;
+		font-size: 14px;
+	}
+
 }
