return showAll button

--- a/src/app/@ansyn/ansyn/modules/filters/components/filter-container/filter-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/filters/components/filter-container/filter-container.component.html
@@ -9,6 +9,12 @@
 				*ngIf="metadataFromState && metadataFromState.collapse && metadataFromState.isFiltered() && !showOnlyFavorite"
 			  	class="filtered">{{"(filtered)" | translate}}</span>
 		</div>
+
+		<div class="filter-title-buttons">
+			<div *ngIf="!showOnlyFavorite" class="show-all">
+				<span (click)="showAll()">{{'Show all' | translate}}</span>
+			</div>
+		</div>
 	</div>
 
 	<div *ngIf="(isLoading$ | async); else filterBody">
