--- a/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
@@ -2,6 +2,7 @@
 
 :host {
 	&:extend(.status-bar-panel);
+	max-width: 150px;
 	flex-flow: wrap;
 	border-left: 1px solid @status-bar-delimiter;
 	user-select: none;
