--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -10,21 +10,17 @@
 	height: @status-bar-height;
 	box-shadow: 0 -10px 20px 0 rgba(0, 0, 0, 0.3);
 	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
+	align-items: center;
 	color: white;
 
-	.status-bar {
+	div.search {
 		display: flex;
-		flex: 1;
-
-		div.search {
-			display: flex;
-			flex-grow: 1;
-		}
-		/deep/ i.icon, span.title {
-			margin: 0 5px;
-		}
+		flex-grow: 1;
 	}
+
+	/deep/ i.icon, span.title {
+		margin: 0 2.5px;
+	}
+
 
 }
