--- a/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
@@ -22,13 +22,13 @@
 
 		div {
 			display: flex;
-			width: 60px;
+			flex: 1;
+			justify-content: flex-start;
 			align-items: center;
 		}
 
 		.share {
 			cursor: pointer;
-			margin: 0 10px;
 		}
 	}
 }
