--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -1,6 +1,6 @@
 
 <!-- Geo filter -->
-<div class="box" id="editGeoFilter">
+<div class="box" id="geoPreSearch">
 
 	<button ansynComboBoxTrigger
 			(click)="toggleLocationPicker()"
@@ -43,7 +43,7 @@
 </div>
 
 <!-- data input filter-->
-<div class="box">
+<div class="box" id="dataInputsPreSearch">
 	<button ansynComboBoxTrigger
 			#trigger
 			(click)="toggleDataInputFilter()"
