--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
@@ -21,12 +21,15 @@
 			}
 		}
 
-		&#editGeoFilter {
+		&#geoPreSearch {
 			width: 150px;
 			span {
 				overflow: hidden;
 				text-overflow: ellipsis;
 			}
+		}
+		&#dataInputsPreSearch {
+			width: 105px;
 		}
 	}
 
