--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -8,18 +8,17 @@
 :host {
 	background-color: @status-bar-background;
 	height: @status-bar-height;
-	box-shadow: 0 -10px 20px 0 rgba(0, 0, 0, 0.3);
 	display: flex;
-	align-items: center;
 	color: white;
 
 	div.search {
 		display: flex;
 		flex-grow: 1;
+		border-right: 1px solid @status-bar-delimiter;
 	}
 
 	/deep/ i.icon, span.title {
-		margin: 0 6px 0 6px;
+		margin: 0 3px 0 5px;
 	}
 
 
