--- a/src/app/@ansyn/ansyn/less/common.less
+++ b/src/app/@ansyn/ansyn/less/common.less
@@ -18,7 +18,7 @@
 
 .status-bar-button {
 	background: @status-bar-panels;
-	padding: 5px 11px 5px 0;
+	padding: 5px 11px;
 }
 
 .status-bar-button-round {
