--- a/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.html
@@ -26,7 +26,7 @@
 			[disabled]="disableOnlyFavoritesButton"
 			(click)="showOnlyFavorites()">
 		<i class="icon"
-		   [ngClass]="onlyFavorite ? 'icon-favorite-full'  : 'icon-favorite-empty'"></i>&nbsp;
+		   [ngClass]="onlyFavorite ? 'icon-favorite-full'  : 'icon-favorite-empty'"></i>
 		<span class="title">{{'Favorites' | translate}}</span>
 	</button>
 </div>
