--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -17,8 +17,8 @@
 		border-right: 1px solid @status-bar-delimiter;
 	}
 
-	/deep/ i.icon, span.title {
-		margin: 0 3px 0 5px;
+	/deep/ i.icon {
+		margin: 0 3px;
 	}
 
 
