--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -41,6 +41,11 @@
 			width: calc(100% - @menu-width);
 			height: @status-bar-height;
 			z-index: @z-index-status-bar-navigation-area;
+
+			&.expand {
+				left: 0;
+				width: 100%;
+			}
 		}
 
 		div.layer {
