fix ram catch not search if some uncheck

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1010,7 +1010,7 @@
 		  "blacklist": [],
 		  "dataInputFiltersConfig": {
 			"text": "Planet",
-			"value": "Planet",
+			"value": "PLANET",
 			"collapsed": true,
 			"children": [
 			  {
@@ -1092,7 +1092,7 @@
 			"blacklist":[],
 			"dataInputFiltersConfig":{
 				"text":"Open Street Images",
-				"value":"Open Street Images",
+				"value":"PIC4CARTO",
 				"collapsed":true,
 				"children":[
 					{
@@ -1165,7 +1165,7 @@
 			"blacklist": [],
 			"dataInputFiltersConfig": {
 				"text": "OpenAerial",
-				"value": "OpenAerial",
+				"value": "OPEN_AERIAL",
 					"indeterminate": true,
 					"collapsed": true,
 					"children": [
@@ -1221,7 +1221,7 @@
 			"blacklist": [],
 			"dataInputFiltersConfig": {
 				  "text":"Imisight",
-				  "value": "Imisight",
+				  "value": "IMISIGHT",
 				  "collapsed": true,
 				  "children": [
 					 {
@@ -1276,7 +1276,7 @@
 			"blacklist": [],
 			"dataInputFiltersConfig": {
 				"text": "Sentinel",
-				"value": "Sentinel",
+				"value": "SENTINEL",
 					"indeterminate": true,
 					"collapsed": true,
 					"children": [
@@ -1332,7 +1332,7 @@
 			"blacklist": [],
 			"dataInputFiltersConfig": {
 				"text": "Airbus",
-				"value": "Airbus",
+				"value": "AIRBUS",
 					"indeterminate": true,
 					"collapsed": true,
 					"children": [
@@ -1406,7 +1406,7 @@
         		"blacklist": [],
         		"dataInputFiltersConfig": {
         			"text": "Video",
-        			"value": "Video",
+        			"value": "IMAGERY_VIDEO",
         				"indeterminate": true,
         				"collapsed": true,
         				"children": [
