--- a/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
@@ -22,9 +22,8 @@
 		flex: 0 0 100%;
 		justify-content: space-between;
 
-		div {
-			display: flex;
-			align-items: center;
+		i {
+			vertical-align: middle;
 		}
 
 		.share {
