--- a/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.less
@@ -1,5 +1,5 @@
 @import "ansyn/less/common";
-@import "../../less/common";
+@import "../../less/status-bar-common";
 
 :host {
 	&:extend(.status-bar-panel);
