--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
@@ -1,7 +1,7 @@
 @import "ansyn/less/common";
 @import "ansyn/less/colors";
 @import "ansyn/less/globals";
-@import "../../less/common";
+@import "../../less/status-bar-common";
 
 :host {
 	&:extend(.status-bar-panel);
