uploading search-results table

--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
@@ -44,7 +44,7 @@
 				</div>
 
 				<div class="results-table-body-col overlay-type">
-					<i class="icon icon-app-next"></i>
+					<i class="{{getType(overlay)}}"></i>
 				</div>
 
 			</div>
