--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
@@ -4,17 +4,17 @@
 			{{'Search results' | translate}}
 		</div>
 		<div class="box"
-			 [attr.tooltip-value]="statusBarConfig?.toolTips?.overlayCount | translate"
 			 tooltip-class="top">
 			<i class="block-icon icon-status-bar-imagery-count"></i>
-			<span>{{overlays.length || 0}}</span>
+			<span class="overlay-count">{{overlays.length || 0}}</span>
 		</div>
 	</div>
 	<div class="results-table-head">
 		<div class="results-table-head-row">
 			<div class="results-table-head-row-data">
-				<div (click)="filterOverlays(header)" *ngFor="let header of tableHeaders" class="results-table-head-col">
+				<div (click)="filterOverlays(header)" *ngFor="let header of tableHeaders" class="results-table-head-col  {{header.headerName}}">
 					{{header.headerName | translate}}
+					<i class="icon icon-arrow"></i>
 				</div>
 			</div>
 
