--- a/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.less
@@ -16,6 +16,8 @@
 
 		.display-button {
 			&:extend(.status-bar-button);
+			border: 1px solid #746666;
+
 
 			&.active {
 				&:extend(.status-bar-button-active);
