--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -1,7 +1,3 @@
-
-.icon-input-filter:before {
-	content: "\e900";
-}
 .icon-layer-add:before {
 	content: "\e800";
 }
@@ -137,8 +133,14 @@
 .icon-status-bar-imagery-count:before {
 	content: "\e82d";
 }
+.icon-input-filter:before {
+	content: "\e82e";
+}
 .icon-area-big:before {
 	content: "\e82f";
+}
+.icon-status-bar-time:before {
+	content: "\e900";
 }
 .icon-temporary-link:before {
 	content: "\e831";
@@ -221,15 +223,12 @@
 .icon-credentials:before {
 	content: "\e84c";
 }
+.icon-status-bar-geo:before {
+	content: "\e901";
+}
 .icon-method-draw-image:before {
 	content: "\e84e";
 }
 .icon-credentials-request:before {
 	content: "\e84f";
-}
-.icon-status-bar-geo:before {
-	content: "\e850";
-}
-.icon-status-bar-time:before {
-	content: "\e851";
 }
