--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -48,6 +48,8 @@
 				display: flex;
 				align-items: center;
 				z-index: 1;
+				margin-left: 6px;
+
 
 				&:hover:not(:disabled) {
 					background: rgba(0, 0, 0, 0.5);
@@ -62,6 +64,18 @@
 				vertical-align: middle;
 				display: block;
 			}
+
+			i {
+				&.active {
+					color: @application-primary-color;
+				}
+			}
+
+			i.small {
+				font-size: 0.6em;
+			}
+
+
 		}
 	}
 
