--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
@@ -6,6 +6,7 @@
 	left: 5px;
 	top: 6px;
 	display: flex;
+	width: 150px;
 
 	button {
 		position: relative;
@@ -23,6 +24,12 @@
 			display: flex;
 			align-items: center;
 			z-index: 1;
+			margin-left: 6px;
+
+			&.perspective {
+				margin-left: 11px;
+			}
+
 
 			&:hover:not(:disabled) {
 				background: rgba(0, 0, 0, 0.5);
@@ -39,9 +46,35 @@
 			}
 		}
 
+		i.small {
+			font-size: 0.6em;
+		}
+
 		.icon::before {
 			vertical-align: middle;
 			display: block;
+		}
+	}
+
+	div.more-buttons {
+		background: @background-color-3;
+		width: 220px;
+		height: 75px;
+		margin-top: 35px;
+		padding-right: 25px;
+		z-index: 0;
+		text-align: left;
+
+		.button-title {
+			width: 150px;
+		}
+
+		.preset-title {
+			margin-left: 28px;
+		}
+
+		button {
+			font-size: 13px;
 		}
 	}
 }
