--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
@@ -35,6 +35,13 @@
 		   [class.icon-layers-hide]="hideLayers"></i>
 	</button>
 
+	<button class="small-icon-button perspective"
+			(click)="toggleImageryPerspective()"
+			[attr.tooltip-value]="orientation | translate"
+			tooltip-class="bottom right">
+		<i class="icon-status-bar-orientation small" [class.active]="perspective"></i>
+	</button>
+
 	<ng-container
 		*ngFor="let component of entryComponents.status">
 		<ng-container
@@ -42,6 +49,7 @@
 			[ansynEntryComponent]="{ component: component , mapId: mapId }">
 		</ng-container>
 	</ng-container>
+
 </div>
 
 <div class="description">
@@ -56,7 +64,6 @@
 	</div>
 </div>
 
-
 <ng-container *ngIf="!isMinimalistViewMode">
 	<ng-container
 		*ngFor="let component of entryComponents.status">
@@ -66,3 +73,4 @@
 		</ng-container>
 	</ng-container>
 </ng-container>
+
