--- a/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.html
@@ -1,5 +1,8 @@
 <div class="top">
-	{{selectedCaseName$ | async}}
+	<span [attr.tooltip-value]="selectedCaseName$ | async"
+	tooltip-class="bottom">
+		{{selectedCaseName$ | async}}
+	</span>
 </div>
 <div class="bottom">
 	<div class="box"
