--- a/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.html
@@ -22,11 +22,11 @@
 	<div class="rectangles">
 		<button (click)="nextOverlay($event, false)"
 				[disabled]="!overlay">
-			<i class="icon-app-prev"></i>
+			<i class="icon-prev"></i>
 		</button>
 		<button (click)="nextOverlay($event, true)"
 				[disabled]="!overlay">
-			<i class="icon-app-next"></i>
+			<i class="icon-next"></i>
 		</button>
 	</div>
 </div>
