--- a/src/app/@ansyn/ansyn/modules/overlays/components/overlay-navigation-bar/overlay-navigation-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/overlay-navigation-bar/overlay-navigation-bar.component.html
@@ -4,7 +4,7 @@
 			[attr.tooltip-value]="statusBarConfig?.toolTips?.backwards | translate"
 			tooltip-class="top left"
 	>
-		<i class="icon-app-prev"></i>
+		<i class="icon-prev"></i>
 	</button>
 
 	<button (click)="clickGoNextPresetOverlay()"
@@ -22,7 +22,7 @@
 			[attr.tooltip-value]="statusBarConfig?.toolTips?.forward | translate"
 			tooltip-class="top left"
 	>
-		<i class="icon-app-next"></i>
+		<i class="icon-next"></i>
 	</button>
 	<!--unUsed stop button - future development -->
 	<button style="display: none" class="transparent"
