--- a/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
@@ -7,29 +7,48 @@
 	border-left: 1px solid @status-bar-delimiter;
 	user-select: none;
 
-	.top {
+	div {
 		display: flex;
 		flex: 0 0 100%;
-		padding: 3px 5px;
-		box-sizing: border-box;
-		border-bottom: 1px solid @status-bar-delimiter;
-	}
+		&.top {
+			padding: 3px 5px;
+			border-bottom: 1px solid @status-bar-delimiter;
 
-	.bottom {
-		display: flex;
-		flex: 0 0 100%;
-		justify-content: space-between;
-
-		div {
-			display: flex;
-			flex: 1;
-			justify-content: flex-start;
-			align-items: center;
+			span {
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
 		}
 
-		.share {
-			cursor: pointer;
-			margin-right: 5px;
+		&.bottom {
+			justify-content: space-between;
+
+			div {
+				display: flex;
+				flex: 1;
+				justify-content: flex-start;
+				align-items: center;
+
+				&.share {
+					cursor: pointer;
+					margin-right: 5px;
+				}
+			}
+
+
+		}
+	}
+}
+
+
+@media screen and (max-width: 1280px) {
+	:host {
+		width: 95px;
+		.bottom {
+			div.share {
+				justify-content: flex-end;
+				font-size: 0;
+			}
 		}
 	}
 }
