--- a/src/app/@ansyn/ansyn/modules/core/forms/combo-box-trigger/combo-box-trigger.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/combo-box-trigger/combo-box-trigger.component.less
@@ -15,7 +15,7 @@
 	color: white;
 	border: none;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	align-items: center;
 	padding: 0 5px;
 	cursor: default;
