--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
@@ -3,8 +3,7 @@
 		<div class="header-title">
 			{{'Search results' | translate}}
 		</div>
-		<div class="box"
-			 tooltip-class="top">
+		<div class="box">
 			<i class="block-icon icon-status-bar-imagery-count"></i>
 			<span class="overlay-count">{{overlays.length || 0}}</span>
 		</div>
@@ -24,7 +23,7 @@
 	<div class="results-table-body scrolled"  (ansynInfiniteScroll)="loadResults()" *ngIf="overlays">
 
 		<div class="results-table-body-row"
-			 *ngFor="let overlay of overlays"
+			 *ngFor="let overlay of (loadOverlaysArray$ | async)"
 			 (click)="openOverlay(overlay)"
 			 (mouseenter)="onMouseOver($event, overlay.id)"
 			 (mouseleave)="onMouseOut()"
